--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
-    <!-- <link rel="stylesheet" href="css.css"> -->
+    <link rel="stylesheet" href="css.css">
   </head>
   <body>
     <div class="container">
